--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.CommunityManangementSystem"
         tools:targetApi="31">
         <activity
+            android:name=".ui.DashboardView"
+            android:exported="false" />
+        <activity
             android:name=".ui.FamilyMemberView"
             android:exported="false" />
         <activity
@@ -56,7 +59,7 @@
             android:name=".ui.NewsViewContent"
             android:exported="false" />
         <activity
-            android:name=".ui.LoginView"
+            android:name=".ui.MedicineView"
             android:exported="false" />
         <activity
             android:name=".ui.NewsView"
@@ -68,7 +71,7 @@
             android:name=".ui.WelcomeView"
             android:exported="false" />
         <activity
-            android:name=".ui.DashboardView"
+            android:name=".ui.LoginView"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
