--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.CommunityManangementSystem"
         tools:targetApi="31">
         <activity
+            android:name=".ui.content.news.ui.NewsCommentView"
+            android:exported="false" />
+        <activity
             android:name=".ui.content.medicine.MedicineContent"
             android:exported="false" />
         <activity
@@ -22,16 +25,16 @@
             android:name=".ui.content.sports.RequestSports"
             android:exported="false" />
         <activity
-            android:name=".ui.content.history.HistoryView"
+            android:name=".ui.content.news.ui.NewsViewContent"
             android:exported="false" />
         <activity
             android:name=".ui.LoginView"
             android:exported="false" />
         <activity
-            android:name=".ui.FamilyMemberView"
+            android:name=".ui.content.family.ui.FamilyMemberView"
             android:exported="false" />
         <activity
-            android:name=".ui.OfficialView"
+            android:name=".ui.content.official.ui.OfficialView"
             android:exported="false" />
         <activity
             android:name=".ui.content.emergency.EmergencyView"
@@ -68,13 +71,13 @@
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".ui.content.news.NewsViewContent"
+            android:name=".ui.dashboard.DashboardView"
             android:exported="false" />
         <activity
             android:name=".ui.content.medicine.MedicineView"
             android:exported="false" />
         <activity
-            android:name=".ui.content.news.NewsView"
+            android:name=".ui.content.news.ui.NewsView"
             android:exported="false" />
         <activity
             android:name=".ui.content.message.MessageView"
@@ -83,7 +86,7 @@
             android:name=".ui.WelcomeView"
             android:exported="false" />
         <activity
-            android:name=".ui.DashboardView"
+            android:name=".ui.content.history.HistoryView"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
